build a test version with reactjs

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@
     height             : 610px;
     padding            : 15px;
     margin             : 0px;
+    position: relative;
   
     .outline {
       position   : absolute;
